--- a/vue/package.json
+++ b/vue/package.json
@@ -11,6 +11,7 @@
     "apexcharts": "^3.36.3",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "dom-slider": "^2.1.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue3-apexcharts": "^1.4.1"
